--- a/conda-env.yml
+++ b/conda-env.yml
@@ -1,28 +1,38 @@
 name: python-data-env
+channels:
+- defaults
+- conda-forge
 dependencies:
+- _nb_ext_conf=0.3.0=py35_0
+- anaconda-client=1.6.0=py35_0
 - appnope=0.1.0=py35_0
 - bokeh=0.12.1=py35_0
+- clyent=1.2.2=py35_0
 - cycler=0.10.0=py35_0
 - decorator=4.0.10=py35_0
 - entrypoints=0.2.2=py35_0
 - freetype=2.5.5=1
-- ipykernel=4.3.1=py35_0
-- ipython=5.0.0=py35_0
+- ipykernel=4.5.2=py35_0
+- ipython=5.1.0=py35_1
 - ipython_genutils=0.1.0=py35_0
-- ipywidgets=4.1.1=py35_0
+- ipywidgets=5.2.2=py35_0
 - jinja2=2.8=py35_1
 - jsonschema=2.5.1=py35_0
 - jupyter=1.0.0=py35_3
-- jupyter_client=4.3.0=py35_0
+- jupyter_client=4.4.0=py35_0
 - jupyter_console=5.0.0=py35_0
-- jupyter_core=4.1.0=py35_0
+- jupyter_core=4.2.1=py35_0
 - libpng=1.6.22=0
 - markupsafe=0.23=py35_2
 - matplotlib=1.5.1=np111py35_0
 - mistune=0.7.2=py35_1
 - mkl=11.3.3=0
+- nb_anacondacloud=1.2.0=py35_0
+- nb_conda=2.0.0=py35_0
+- nb_conda_kernels=2.0.0=py35_0
 - nbconvert=4.2.0=py35_0
 - nbformat=4.0.1=py35_0
+- nbpresent=3.0.2=py35_0
 - notebook=4.2.2=py35_0
 - numpy=1.11.1=py35_0
 - openssl=1.0.2h=1
@@ -59,12 +69,16 @@ dependencies:
 - traitlets=4.2.2=py35_0
 - wcwidth=0.1.7=py35_0
 - wheel=0.29.0=py35_0
+- widgetsnbextension=1.2.6=py35_0
 - xz=5.2.2=0
 - yaml=0.1.6=0
 - zlib=1.2.8=3
 - pip:
   - ipython-genutils==0.1.0
-  - jupyter-client==4.3.0
+  - jupyter-client==4.4.0
   - jupyter-console==5.0.0
-  - jupyter-core==4.1.0
+  - jupyter-core==4.2.1
+  - nb-anacondacloud==1.2.0
+  - nb-conda==2.0.0
+  - nb-conda-kernels==2.0.0
   - prompt-toolkit==1.0.3
