--- a/conda-env.yml
+++ b/conda-env.yml
@@ -1,84 +1,34 @@
-name: python-data-env
+name: python-data
 channels:
 - defaults
 - conda-forge
 dependencies:
-- _nb_ext_conf=0.3.0=py35_0
-- anaconda-client=1.6.0=py35_0
-- appnope=0.1.0=py35_0
-- bokeh=0.12.1=py35_0
-- clyent=1.2.2=py35_0
-- cycler=0.10.0=py35_0
-- decorator=4.0.10=py35_0
-- entrypoints=0.2.2=py35_0
-- freetype=2.5.5=1
-- ipykernel=4.5.2=py35_0
-- ipython=5.1.0=py35_1
-- ipython_genutils=0.1.0=py35_0
-- ipywidgets=5.2.2=py35_0
-- jinja2=2.8=py35_1
-- jsonschema=2.5.1=py35_0
-- jupyter=1.0.0=py35_3
-- jupyter_client=4.4.0=py35_0
-- jupyter_console=5.0.0=py35_0
-- jupyter_core=4.2.1=py35_0
-- libpng=1.6.22=0
-- markupsafe=0.23=py35_2
-- matplotlib=1.5.1=np111py35_0
-- mistune=0.7.2=py35_1
-- mkl=11.3.3=0
-- nb_anacondacloud=1.2.0=py35_0
-- nb_conda=2.0.0=py35_0
-- nb_conda_kernels=2.0.0=py35_0
-- nbconvert=4.2.0=py35_0
-- nbformat=4.0.1=py35_0
-- nbpresent=3.0.2=py35_0
-- notebook=4.2.2=py35_0
-- numpy=1.11.1=py35_0
-- openssl=1.0.2h=1
-- pandas=0.18.1=np111py35_0
-- path.py=8.2.1=py35_0
-- pexpect=4.0.1=py35_0
-- pickleshare=0.7.3=py35_0
-- pip=8.1.2=py35_0
-- prompt_toolkit=1.0.3=py35_0
-- ptyprocess=0.5.1=py35_0
-- pygments=2.1.3=py35_0
-- pyparsing=2.1.4=py35_0
-- pyqt=4.11.4=py35_4
-- python=3.5.2=0
-- python-dateutil=2.5.3=py35_0
-- python.app=1.2=py35_4
-- pytz=2016.6.1=py35_0
-- pyyaml=3.11=py35_4
-- pyzmq=15.4.0=py35_0
-- qt=4.8.7=4
-- qtconsole=4.2.1=py35_0
+- bkcharts=0.2=py36_0
+- bokeh=0.12.6=py36_0
+- boto3=1.4.4=py36_0
+- botocore=1.5.67=py36_0
+- docutils=0.13.1=py36_0
+- jinja2=2.9.6=py36_0
+- jmespath=0.9.0=py36_0
+- markupsafe=0.23=py36_2
+- mkl=2017.0.3=0
+- numpy=1.13.1=py36_0
+- openssl=1.0.2l=0
+- pandas=0.20.3=py36_0
+- pip=9.0.1=py36_1
+- python=3.6.2=0
+- python-dateutil=2.6.1=py36_0
+- pytz=2017.2=py36_0
+- pyyaml=3.12=py36_0
 - readline=6.2=2
-- requests=2.10.0=py35_0
-- scipy=0.18.0=np111py35_0
-- setuptools=25.1.6=py35_0
-- simplegeneric=0.8.1=py35_1
-- sip=4.18=py35_0
-- six=1.10.0=py35_0
-- sqlalchemy=1.0.12=py35_0
+- requests=2.14.2=py36_0
+- s3transfer=0.1.10=py36_0
+- setuptools=27.2.0=py36_0
+- six=1.10.0=py36_0
 - sqlite=3.13.0=0
-- terminado=0.6=py35_0
 - tk=8.5.18=0
-- tornado=4.4.1=py35_0
-- traitlets=4.2.2=py35_0
-- wcwidth=0.1.7=py35_0
-- wheel=0.29.0=py35_0
-- widgetsnbextension=1.2.6=py35_0
-- xz=5.2.2=0
+- tornado=4.5.1=py36_0
+- wheel=0.29.0=py36_0
+- xz=5.2.2=1
 - yaml=0.1.6=0
 - zlib=1.2.8=3
-- pip:
-  - ipython-genutils==0.1.0
-  - jupyter-client==4.4.0
-  - jupyter-console==5.0.0
-  - jupyter-core==4.2.1
-  - nb-anacondacloud==1.2.0
-  - nb-conda==2.0.0
-  - nb-conda-kernels==2.0.0
-  - prompt-toolkit==1.0.3
