--- a/conda-env.yml
+++ b/conda-env.yml
@@ -25,6 +25,7 @@ dependencies:
 - s3transfer=0.1.10=py36_0
 - setuptools=27.2.0=py36_0
 - six=1.10.0=py36_0
+- sqlalchemy=1.1.11=py36_0
 - sqlite=3.13.0=0
 - tk=8.5.18=0
 - tornado=4.5.1=py36_0
