--- a/conda-env.yml
+++ b/conda-env.yml
@@ -10,12 +10,14 @@ dependencies:
 - docutils=0.13.1=py36_0
 - jinja2=2.9.6=py36_0
 - jmespath=0.9.0=py36_0
+- libpq=9.5.4=0
 - markupsafe=0.23=py36_2
 - mkl=2017.0.3=0
 - numpy=1.13.1=py36_0
 - openssl=1.0.2l=0
 - pandas=0.20.3=py36_0
 - pip=9.0.1=py36_1
+- psycopg2=2.7.1=py36_0
 - python=3.6.2=0
 - python-dateutil=2.6.1=py36_0
 - pytz=2017.2=py36_0
