--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ pyspark/notebooks/.checkpoints/
 pyspark/notebooks/spark-warehouse/
 pyspark/notebooks/metastore_db/
 pyspark/notebooks/derby.log
+
+*/settings.yml
