--- a/conda-env.yml
+++ b/conda-env.yml
@@ -3,36 +3,79 @@ channels:
 - defaults
 - conda-forge
 dependencies:
+- blinker=1.4=py36_0
+- flake8-import-order=0.12=py36_0
+- oauthlib=2.0.2=py36_0
+- pep8-naming=0.4.1=py36_0
+- pyjwt=1.5.2=py36_0
+- requests-oauthlib=0.8.0=py36_1
+- tweepy=3.5.0=py36_0
+- asn1crypto=0.22.0=py36_0
+- attrs=15.2.0=py36_0
+- automat=0.5.0=py36_0
 - bkcharts=0.2=py36_0
 - bokeh=0.12.6=py36_0
 - boto3=1.4.4=py36_0
 - botocore=1.5.67=py36_0
+- cffi=1.10.0=py36_0
+- constantly=15.1.0=py36_0
+- cryptography=1.8.1=py36_0
+- cssselect=1.0.1=py36_0
 - docutils=0.13.1=py36_0
+- flake8=3.3.0=py36_0
+- hyperlink=17.1.1=py36_0
+- idna=2.5=py36_0
+- incremental=16.10.1=py36_0
 - jinja2=2.9.6=py36_0
 - jmespath=0.9.0=py36_0
+- libiconv=1.14=0
 - libpq=9.5.4=0
+- libxml2=2.9.4=0
+- libxslt=1.1.29=0
+- lxml=3.8.0=py36_0
 - markupsafe=0.23=py36_2
+- mccabe=0.6.1=py36_0
 - mkl=2017.0.3=0
 - numpy=1.13.1=py36_0
 - openssl=1.0.2l=0
+- packaging=16.8=py36_0
 - pandas=0.20.3=py36_0
+- parsel=1.2.0=py36_0
 - pip=9.0.1=py36_1
 - psycopg2=2.7.1=py36_0
+- pyasn1=0.2.3=py36_0
+- pyasn1-modules=0.0.8=py36_0
+- pycodestyle=2.3.1=py36_0
+- pycparser=2.18=py36_0
+- pydispatcher=2.0.5=py36_0
+- pyflakes=1.5.0=py36_0
+- pyopenssl=17.0.0=py36_0
+- pyparsing=2.2.0=py36_0
+- pysocks=1.6.6=py36_0
 - python=3.6.2=0
 - python-dateutil=2.6.1=py36_0
 - pytz=2017.2=py36_0
 - pyyaml=3.12=py36_0
+- queuelib=1.4.2=py36_0
 - readline=6.2=2
 - requests=2.14.2=py36_0
 - ruamel_yaml=0.11.14=py36_1
 - s3transfer=0.1.10=py36_0
+- scrapy=1.3.3=py36_0
+- service_identity=17.0.0=py36_0
 - setuptools=27.2.0=py36_0
 - six=1.10.0=py36_0
 - sqlalchemy=1.1.11=py36_0
 - sqlite=3.13.0=0
 - tk=8.5.18=0
 - tornado=4.5.1=py36_0
+- twisted=17.5.0=py36_0
+- w3lib=1.17.0=py36_0
 - wheel=0.29.0=py36_0
 - xz=5.2.2=1
 - yaml=0.1.6=0
 - zlib=1.2.8=3
+- zope=1.0=py36_0
+- zope.interface=4.4.2=py36_0
+- pip:
+  - service-identity==17.0.0
